<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<FrameLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    >
    <ImageView
        android:id="@+id/image_view"
        android:layout_width="150dp"
        android:layout_height="150dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        >
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rs "
            android:padding="5dp"
            android:layout_gravity="center|bottom"
            android:background="@color/white"/>
    <TextView
        android:id="@+id/price_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:padding="5dp"

        android:background="@color/white"/>

    </LinearLayout>

</FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/title"

            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/description"
            android:padding="5dp"
            android:textAlignment="textStart"
            android:ellipsize="end"
            android:maxLines="6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"/>
    </LinearLayout>

</LinearLayout>